# ElectyrolyisWebApp

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env.example  requirements.txt  run.py  wsgi.py
backend/app/: __init__.py  config.py  extensions.py  logging_config.py
backend/app/api/: __init__.py  errors.py  molecules.py  routes.py  simulation.py
backend/app/models/: job.py  schemas.py
backend/app/services/: job_manager.py  simulation_service.py
backend/app/utils/: logger.py  molecule_builder.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/common/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  Spinner.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/molecules/: AtomInput.tsx  MoleculeBuilder.tsx  PresetSelector.tsx  index.ts
frontend/src/components/simulation/: EnergyChart.tsx  JobStatus.tsx  ResultsDisplay.tsx  SimulationConfig.tsx  index.ts
frontend/src/hooks/: index.ts  useSimulation.ts
frontend/src/pages/: HomePage.tsx  ResultsPage.tsx  SimulationPage.tsx  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: elements.ts  format.ts
quantum_chemistry/: __init__.py  config.py  exceptions.py  mappings.py  molecule.py  simulator.py
quantum_chemistry/solvers/: __init__.py  base.py  sqd.py  vqe.py
quantum_chemistry/tests/: test_molecule.py
