[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_chemistry"
version = "0.1.0"
description = "Quantum chemistry ground state energy calculator using VQE and SQD"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Callum Follett", email = "callum.follett@ucalgary.ca"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pennylane>=0.38.0",
    "pyscf>=2.4.0",
    "jax[cpu]>=0.4.30",
    "jaxlib>=0.4.30",
    "optax>=0.2.0",
    "numpy>=1.24.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.0",
    "qiskit-ibm-runtime>=0.20.0",
    "ffsim>=0.0.35",
    "qiskit-addon-sqd>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_chemistry*"]